## 1.1.0

Added try, catch, throw, finally support

## 1.0.0

Initial release