@@ -1,3 +1,7 @@
+## Current
+
+engine/node.js - Registers `.sl` extension in `module.extensions`
+
 ## 1.1.0
 
 Added try, catch, throw, finally support
